--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,4 @@ static/api
 /content/posts/newsletter-signup.md
 /content/posts/post-markup-and-formatting.md
 /content/posts/resourcegrid-vue.md
-
+/pages/contact.vue
